// This code can be used at dbdiagram.io
//// -- LEVEL 1
//// -- Tables and References

// Creating tables
Table item {
  id number [pk, not null]
  Name string [not null]
  Currently string [not null]
  Buy_Price string
  First_Bid string [not null]
  Number_of_Bids number [not null]
  Started string [not null]
  Ends string [not null]
  Seller string [not null]
  Description string [not null]
}

Ref: item.Seller - user.UserID

Ref: item.id < item_category.item_id

Table item_category {
  item_id number 
  category string
}

Ref: item.id < bid.Item_ID

Table bid {
  Item_ID number
  Bidder_ID string [pk]
  Time string [not null]
  Amount string [not null]

  Indexes {
    (Item_ID, Bidder_ID) [unique]
  }
}


Table user {
  UserID string [pk, not null]
  Location string
  Country string
  Rating number [not null]
}

Ref: bid.Bidder_ID - user.UserID